syntax = "proto3";

package GoTask;

option go_package = "github.com/NithishNithi/GoTask";

service GoTaskService {
    rpc CreateCustomer (CustomerDetails) returns (CustomerResponse);
    rpc InsertToken (Token) returns (TokenResponse);
    // ------>
    rpc CreateTask(TaskDetails)returns(TaskResponse);
    rpc EditTask(EditTaskDetails)returns(TaskResponse);
    rpc DeleteTask(TaskDelete)returns(Empty);
    rpc GetTaskbyId(TaskDelete)returns(TaskDetails);
    rpc GetTask (TaskDelete) returns (Empty);
}
// --------->
message CustomerDetails {
    string CustomerId = 1;
    string Email = 2;
    string FullName = 3;
    string Password = 4;
    string DateofBirth = 5;
    string PhoneNumber = 6;
    string HouseNo = 7;
    string Street = 8;
    string City = 9;
    string Country =10;
    string Zip = 11;
    
}


message CustomerResponse {
    string CustomerId = 1;
    bool Success = 2;
    string Message = 3;
}


// ------------>


message Token {
    string CustomerId = 1;
    string Email = 2;
    string Token = 3;
}
message TokenResponse {
    string Token = 1;
}

message Empty {
}


// ----------->


message TaskDetails {
    string TaskId = 1;
    string CustomerId = 2;
    string Title = 3;
    string Description = 4;
    string DueDate = 5;
    string Priority = 6;
    string Category = 7;
    string CreatedAt = 8;
    bool   Completed = 9;
}

message TaskResponse {
    string TaskId = 1;
    string Title = 2;
    string DueDate = 3;
}

message EditTaskDetails {
    string CustomerId =1;
    string TaskId = 2;
    string Field = 3;
    string Value=5;  
}

message TaskDelete{
    string TaskId = 1;
    string CustomerId =2;
}

